--- a/hw5(mvc)/hw5(mvc).csproj
+++ b/hw5(mvc)/hw5(mvc).csproj
@@ -7,4 +7,9 @@
     <RootNamespace>hw5_mvc_</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Icons\" />
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
